--- a/Final Fantasy Mystic Quest (SNES)/Wiki/Final Fantasy Mystic Quest (SNES) - Values.wikitext
+++ b/Final Fantasy Mystic Quest (SNES)/Wiki/Final Fantasy Mystic Quest (SNES) - Values.wikitext
@@ -157,43 +157,45 @@
 |-
 |  style="text-align: center;"  |  $01  ||  style="text-align: center;"  |  $0e  ||  style="text-align: center;"  |  $23  ||  Battlefield #1 - North of Level Forest
 |-
-|  style="text-align: center;"  |  $02  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $02  ||  style="text-align: center;"  |  $08  ||  style="text-align: center;"  |  $1f  ||  Battlefield #2 - West of Sand Temple
 |-
-|  style="text-align: center;"  |  $03  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $03  ||  style="text-align: center;"  |  $16  ||  style="text-align: center;"  |  $1f  ||  Battlefield #3 - East of Sand Temple
 |-
-|  style="text-align: center;"  |  $04  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $04  ||  style="text-align: center;"  |  $22  ||  style="text-align: center;"  |  $19  ||  Battlefield #4 - North-East of Focus Tower
 |-
-|  style="text-align: center;"  |  $05  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $05  ||  style="text-align: center;"  |  $29  ||  style="text-align: center;"  |  $13  ||  Battlefield #5 - East of Libra Temple
 |-
-|  style="text-align: center;"  |  $06  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $06  ||  style="text-align: center;"  |  $2e  ||  style="text-align: center;"  |  $15  ||  Battlefield #6 - South of Aquaria
 |-
-|  style="text-align: center;"  |  $07  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $07  ||  style="text-align: center;"  |  $37  ||  style="text-align: center;"  |  $0f  ||  Battlefield #7 - East of Aquaria
 |-
-|  style="text-align: center;"  |  $08  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $08  ||  style="text-align: center;"  |  $33  ||  style="text-align: center;"  |  $0d  ||  Battlefield #8 - West of Wintry Cave
 |-
-|  style="text-align: center;"  |  $09  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $09  ||  style="text-align: center;"  |  $2d  ||  style="text-align: center;"  |  $09  ||  Battlefield #9 - North of Falls Basin
 |-
-|  style="text-align: center;"  |  $0a  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $0a  ||  style="text-align: center;"  |  $24  ||  style="text-align: center;"  |  $10  ||  Battlefield #10 - North of Libra Temple
 |-
-|  style="text-align: center;"  |  $0b  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $0b  ||  style="text-align: center;"  |  $1f  ||  style="text-align: center;"  |  $10  ||  Battlefield #11 - North of Wintry Temple
 |-
-|  style="text-align: center;"  |  $0c  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $0c  ||  style="text-align: center;"  |  $1a  ||  style="text-align: center;"  |  $17  ||  Battlefield #12 - North of Focus Tower #4
 |-
-|  style="text-align: center;"  |  $0d  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $0d  ||  style="text-align: center;"  |  $1a  ||  style="text-align: center;"  |  $13  ||  Battlefield #13 - North of Battlefield #12
 |-
-|  style="text-align: center;"  |  $0e  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $0e  ||  style="text-align: center;"  |  $1a  ||  style="text-align: center;"  |  $0e  ||  Battlefield #14 - East of Fireburg
 |-
-|  style="text-align: center;"  |  $0f  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $0f  ||  style="text-align: center;"  |  $0f  ||  style="text-align: center;"  |  $0c  ||  Battlefield #15 - West of Fireburg
 |-
-|  style="text-align: center;"  |  $10  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  colspan="4"  |  
 |-
-|  style="text-align: center;"  |  $11  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $10  ||  style="text-align: center;"  |  $09  ||  style="text-align: center;"  |  $0c  ||  Battlefield #16 - South of Mine
 |-
-|  style="text-align: center;"  |  $12  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $11  ||  style="text-align: center;"  |  $10  ||  style="text-align: center;"  |  $08  ||  Battlefield #17 - West of Volcano
 |-
-|  style="text-align: center;"  |  $13  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $12  ||  style="text-align: center;"  |  $1f  ||  style="text-align: center;"  |  $0a  ||  Battlefield #18 - East of Lava Dome
 |-
-|  style="text-align: center;"  |  $14  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $13  ||  style="text-align: center;"  |  $2e  ||  style="text-align: center;"  |  $29  ||  Battlefield #19 - East of Kaidge Temple
+|-
+|  style="text-align: center;"  |  $14  ||  style="text-align: center;"  |  $33  ||  style="text-align: center;"  |  $28  ||  Battlefield #20 - South of Windia
 |-
 |  style="text-align: center;"  |  $15  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
 |-
@@ -201,59 +203,63 @@
 |-
 |  style="text-align: center;"  |  $17  ||  style="text-align: center;"  |  $12  ||  style="text-align: center;"  |  $26  ||  Foresta
 |-
-|  style="text-align: center;"  |  $18  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  Sand Temple
+|  style="text-align: center;"  |  $18  ||  style="text-align: center;"  |  $0e  ||  style="text-align: center;"  |  $1e  ||  Sand Temple
 |-
-|  style="text-align: center;"  |  $19  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $19  ||  style="text-align: center;"  |  $0e  ||  style="text-align: center;"  |  $1a  ||  Bone Dungeon
 |-
-|  style="text-align: center;"  |  $1a  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $1a  ||  style="text-align: center;"  |  $1c  ||  style="text-align: center;"  |  $21  ||  Focus Tower - Entrance #1
 |-
-|  style="text-align: center;"  |  $1b  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $1b  ||  style="text-align: center;"  |  $1f  ||  style="text-align: center;"  |  $1d  ||  Focus Tower - Entrance #2
 |-
-|  style="text-align: center;"  |  $1c  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $1c  ||  style="text-align: center;"  |  $24  ||  style="text-align: center;"  |  $13  ||  Libra Temple
 |-
-|  style="text-align: center;"  |  $1d  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $1d  ||  style="text-align: center;"  |  $30  ||  style="text-align: center;"  |  $11  ||  Aquaria
 |-
-|  style="text-align: center;"  |  $1e  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $1e  ||  style="text-align: center;"  |  $37  ||  style="text-align: center;"  |  $0b  ||  Wintry Cave
 |-
-|  style="text-align: center;"  |  $1f  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $1f  ||  style="text-align: center;"  |  $28  ||  style="text-align: center;"  |  $18  ||  Life Temple
 |-
-|  style="text-align: center;"  |  $20  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  colspan="4"  |  
 |-
-|  style="text-align: center;"  |  $21  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $20  ||  style="text-align: center;"  |  $2d  ||  style="text-align: center;"  |  $0e  ||  Falls Basin
 |-
-|  style="text-align: center;"  |  $22  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $21  ||  style="text-align: center;"  |  $2d  ||  style="text-align: center;"  |  $06  ||  Ice Pyramid
 |-
-|  style="text-align: center;"  |  $23  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $22  ||  style="text-align: center;"  |  $34  ||  style="text-align: center;"  |  $18  ||  Spencer's Place
 |-
-|  style="text-align: center;"  |  $24  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $23  ||  style="text-align: center;"  |  $1f  ||  style="text-align: center;"  |  $15  ||  Wintry Temple
 |-
-|  style="text-align: center;"  |  $25  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $24  ||  style="text-align: center;"  |  $1f  ||  style="text-align: center;"  |  $1b  ||  Focus Tower - Entrance #3
 |-
-|  style="text-align: center;"  |  $26  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $25  ||  style="text-align: center;"  |  $1c  ||  style="text-align: center;"  |  $1b  ||  Focus Tower - Entrance #4
 |-
-|  style="text-align: center;"  |  $27  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $26  ||  style="text-align: center;"  |  $15  ||  style="text-align: center;"  |  $0c  ||  Fireburg
 |-
-|  style="text-align: center;"  |  $28  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $27  ||  style="text-align: center;"  |  $09  ||  style="text-align: center;"  |  $08  ||  Mine
 |-
-|  style="text-align: center;"  |  $29  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $28  ||  style="text-align: center;"  |  $0f  ||  style="text-align: center;"  |  $10  ||  Sealed Temple
 |-
-|  style="text-align: center;"  |  $2a  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $29  ||  style="text-align: center;"  |  $18  ||  style="text-align: center;"  |  $08  ||  Volcano
 |-
-|  style="text-align: center;"  |  $2b  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $2a  ||  style="text-align: center;"  |  $19  ||  style="text-align: center;"  |  $05  ||  Lava Dome
 |-
-|  style="text-align: center;"  |  $2c  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $2b  ||  style="text-align: center;"  |  $1d  ||  style="text-align: center;"  |  $1e  ||  Focus Tower - Entrance #5
 |-
-|  style="text-align: center;"  |  $2d  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $2c  ||  style="text-align: center;"  |  $1f  ||  style="text-align: center;"  |  $1f  ||  Rope Bridge
 |-
-|  style="text-align: center;"  |  $2e  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $2d  ||  style="text-align: center;"  |  $26  ||  style="text-align: center;"  |  $1f  ||  Alive Forest
 |-
-|  style="text-align: center;"  |  $2f  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $2e  ||  style="text-align: center;"  |  $28  ||  style="text-align: center;"  |  $27  ||  Giant Tree
 |-
-|  style="text-align: center;"  |  $30  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $2f  ||  style="text-align: center;"  |  $28  ||  style="text-align: center;"  |  $29  ||  Kaidge Temple
 |-
-|  style="text-align: center;"  |  $31  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  colspan="4"  |  
 |-
-|  style="text-align: center;"  |  $32  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $30  ||  style="text-align: center;"  |  $35  ||  style="text-align: center;"  |  $23  ||  Windia
+|-
+|  style="text-align: center;"  |  $31  ||  style="text-align: center;"  |  $3b  ||  style="text-align: center;"  |  $28  ||  Windhole Temple
+|-
+|  style="text-align: center;"  |  $32  ||  style="text-align: center;"  |  $3c  ||  style="text-align: center;"  |  $24  ||  Mount Gale
 |-
 |  style="text-align: center;"  |  $33  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
 |-
@@ -280,6 +286,8 @@
 |  style="text-align: center;"  |  $3e  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
 |-
 |  style="text-align: center;"  |  $3f  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  colspan="4"  |  
 |-
 |  style="text-align: center;"  |  $40  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
 |-
@@ -313,6 +321,8 @@
 |-
 |  style="text-align: center;"  |  $4f  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
 |-
+|  colspan="4"  |  
+|-
 |  style="text-align: center;"  |  $50  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
 |-
 |  style="text-align: center;"  |  $51  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
@@ -344,6 +354,8 @@
 |  style="text-align: center;"  |  $5e  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
 |-
 |  style="text-align: center;"  |  $5f  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  colspan="4"  |  
 |-
 |  style="text-align: center;"  |  $60  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
 |-
@@ -377,6 +389,8 @@
 |-
 |  style="text-align: center;"  |  $6f  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
 |-
+|  colspan="4"  |  
+|-
 |  style="text-align: center;"  |  $70  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
 |-
 |  style="text-align: center;"  |  $71  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
@@ -408,6 +422,8 @@
 |  style="text-align: center;"  |  $7e  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
 |-
 |  style="text-align: center;"  |  $7f  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  colspan="4"  |  
 
 |}
 
