--- a/Final Fantasy Mystic Quest (SNES)/Wiki/Final Fantasy Mystic Quest (SNES) - Values.wikitext
+++ b/Final Fantasy Mystic Quest (SNES)/Wiki/Final Fantasy Mystic Quest (SNES) - Values.wikitext
@@ -263,168 +263,15 @@
 |-
 |  style="text-align: center;"  |  $33  ||  style="text-align: center;"  |  $35  ||  style="text-align: center;"  |  $1e  ||  Pazuzu's Tower
 |-
-|  style="text-align: center;"  |  $34  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $34  ||  style="text-align: center;" colspan="2"  |  (no world map)  ||  Mac's Ship (Ship Dock)
 |-
-|  style="text-align: center;"  |  $35  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $35  ||  style="text-align: center;"  |  $1c  ||  style="text-align: center;"  |  $27  ||  Focus Tower - Entrance #6 (From Mac's Ship) - Doom Castle
 |-
 |  style="text-align: center;"  |  $36  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
 |-
-|  style="text-align: center;"  |  $37  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|  style="text-align: center;"  |  $37  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  After you beat the Dark King?
 |-
-|  style="text-align: center;"  |  $38  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $39  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $3a  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $3b  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $3c  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $3d  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $3e  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $3f  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  colspan="4"  |  
-|-
-|  style="text-align: center;"  |  $40  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $41  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $42  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $43  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $44  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $45  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $46  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $47  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $48  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $49  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $4a  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $4b  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $4c  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $4d  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $4e  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $4f  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  colspan="4"  |  
-|-
-|  style="text-align: center;"  |  $50  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $51  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $52  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $53  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $54  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $55  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $56  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $57  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $58  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $59  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $5a  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $5b  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $5c  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $5d  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $5e  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $5f  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  colspan="4"  |  
-|-
-|  style="text-align: center;"  |  $60  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $61  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $62  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $63  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $64  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $65  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $66  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $67  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $68  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $69  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $6a  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $6b  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $6c  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $6d  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $6e  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $6f  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  colspan="4"  |  
-|-
-|  style="text-align: center;"  |  $70  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $71  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $72  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $73  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $74  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $75  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $76  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $77  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $78  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $79  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $7a  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $7b  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $7c  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $7d  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $7e  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  style="text-align: center;"  |  $7f  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
-|-
-|  colspan="4"  |  
-
+|  style="text-align: center;"  |  $38  ||  style="text-align: center;"  |  $1c  ||  style="text-align: center;"  |  $28  ||  Mac's Ship (at Focus Tower entrance)
 |}
 
 ==Message Speed==
